// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": false,
      "message": "Number must be greater than 0",
      "minimum": 0,
      "path": [
        "logNumber",
      ],
      "type": "number",
    },
    {
      "code": "invalid_string",
      "message": "Invalid",
      "path": [
        "entryTime",
        "date",
      ],
      "validation": "regex",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received boolean",
      "path": [
        "bottomTime",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "duration",
      ],
      "received": "string",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "maxDepth",
        "depth",
      ],
      "type": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'm' | 'ft', received 'fathoms'",
      "options": [
        "m",
        "ft",
      ],
      "path": [
        "maxDepth",
        "unit",
      ],
      "received": "fathoms",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "notes",
      ],
      "received": "number",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "entryTime",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "duration",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is missing required fields 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "entryTime",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "duration",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when retrieving single log entries will allow an admin to view any log entry 1`] = `
{
  "bottomTime": 60,
  "creator": {
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "duration": 66,
  "entryTime": {
    "date": "2022-09-11T23:38:39",
    "timezone": "America/Los_Angeles",
  },
  "id": "7925c289-61bd-49fb-835e-7a7bdc743a56",
  "logNumber": 7469,
  "maxDepth": {
    "depth": 18,
    "unit": "ft",
  },
  "notes": "Voluptates voluptatibus fuga accusamus voluptatibus ipsa nam. Eligendi iste repellat iste assumenda dolorem at odit beatae perspiciatis. Distinctio voluptatem eius quisquam.",
}
`;

exports[`Log entries E2E tests when retrieving single log entries will return the requested log entry 1`] = `
{
  "bottomTime": 60,
  "creator": {
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "duration": 66,
  "entryTime": {
    "date": "2022-09-11T23:38:39",
    "timezone": "America/Los_Angeles",
  },
  "id": "7925c289-61bd-49fb-835e-7a7bdc743a56",
  "logNumber": 7469,
  "maxDepth": {
    "depth": 18,
    "unit": "ft",
  },
  "notes": "Voluptates voluptatibus fuga accusamus voluptatibus ipsa nam. Eligendi iste repellat iste assumenda dolorem at odit beatae perspiciatis. Distinctio voluptatem eius quisquam.",
}
`;

exports[`Log entries E2E tests when searching log entries will allow a search with parameters 1`] = `
[
  {
    "entryTime": {
      "date": "2023-04-05T18:40:53",
      "timezone": "America/New_York",
    },
    "id": "cc8f47cc-3a72-441e-bd42-ef2a6b292207",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-05-10T10:32:54",
      "timezone": "Asia/Singapore",
    },
    "id": "01e544ff-3cee-46fd-a912-f7bcdaeae17c",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-06-03T23:19:12",
      "timezone": "Asia/Singapore",
    },
    "id": "a897c4e1-4323-4aab-a0e5-e18fa3c393fd",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-06-14T12:42:27",
      "timezone": "America/New_York",
    },
    "id": "f3db1b15-8f8b-4ec6-982c-0564337ea720",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-07-09T17:54:10",
      "timezone": "Asia/Singapore",
    },
    "id": "7ca9609b-a872-4f5b-a4dc-ad690fe0962b",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-08-02T11:43:48",
      "timezone": "America/Los_Angeles",
    },
    "id": "07607a66-5e82-403b-a02f-802b8e814b90",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-08-04T20:21:39",
      "timezone": "Europe/Amsterdam",
    },
    "id": "9eddcb94-39d8-40dd-80ae-32ef7c9d2e88",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-08-25T23:39:04",
      "timezone": "Asia/Singapore",
    },
    "id": "d786f6fe-b3a3-43d5-869f-f3837c5ed08e",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-09-02T10:33:10",
      "timezone": "Europe/Amsterdam",
    },
    "id": "270f696e-328f-4a6c-be37-06ce38cf738a",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-09-12T18:16:39",
      "timezone": "America/New_York",
    },
    "id": "eca8865b-f1fa-438b-a356-4f403c86887f",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-09-18T15:19:49",
      "timezone": "America/New_York",
    },
    "id": "adcd9af8-b1a1-4f04-882c-0702eb4e5ff2",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-09-20T15:18:31",
      "timezone": "Asia/Singapore",
    },
    "id": "deaee628-5fa4-48e7-bd46-c3bc66ce9c4b",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-10-11T23:22:25",
      "timezone": "UTC",
    },
    "id": "0723a198-1dd6-4292-acf8-47be234eb3ae",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-11-07T06:48:11",
      "timezone": "UTC",
    },
    "id": "76f18976-ed76-481e-a4c5-dc868bf8a5bc",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-11-23T20:20:08",
      "timezone": "Asia/Singapore",
    },
    "id": "d0f4ce77-90d8-46e7-a227-18a89e6f48d2",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-12-10T00:43:36",
      "timezone": "America/Los_Angeles",
    },
    "id": "ac536d66-7901-4596-8f38-06693dd1fa37",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-12-14T05:01:27",
      "timezone": "UTC",
    },
    "id": "22e6c87f-73f7-4091-8e31-2253be9acb28",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-12-29T11:39:24",
      "timezone": "Europe/Amsterdam",
    },
    "id": "52e6c975-ee97-4bee-955a-6eb06d4fcc1b",
    "owner": "Ayla.Rippin",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will allow admins to search another user's log entries 1`] = `
[
  {
    "entryTime": {
      "date": "2024-03-31T05:14:52",
      "timezone": "Asia/Singapore",
    },
    "id": "9f907460-96d3-4c9b-828e-ac4d057d9bfe",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2024-03-23T14:26:14",
      "timezone": "UTC",
    },
    "id": "c75c55fe-436c-4167-a870-b3447f856ea4",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2024-03-22T20:41:55",
      "timezone": "UTC",
    },
    "id": "d1af5f9e-dda0-4de2-86fd-338d65b40518",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2024-03-01T03:05:37",
      "timezone": "America/Los_Angeles",
    },
    "id": "bbe40137-0a3e-4346-8118-9707ff0a2b6d",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2024-01-26T22:32:34",
      "timezone": "Asia/Singapore",
    },
    "id": "b07e5f28-c783-43f1-86e1-5fa8c69e1acc",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2024-01-04T23:23:44",
      "timezone": "America/Los_Angeles",
    },
    "id": "e5d2f80c-822e-42b9-931d-9785e30fb875",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-12-29T11:39:24",
      "timezone": "Europe/Amsterdam",
    },
    "id": "52e6c975-ee97-4bee-955a-6eb06d4fcc1b",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-12-14T05:01:27",
      "timezone": "UTC",
    },
    "id": "22e6c87f-73f7-4091-8e31-2253be9acb28",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-12-10T00:43:36",
      "timezone": "America/Los_Angeles",
    },
    "id": "ac536d66-7901-4596-8f38-06693dd1fa37",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-11-23T20:20:08",
      "timezone": "Asia/Singapore",
    },
    "id": "d0f4ce77-90d8-46e7-a227-18a89e6f48d2",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-11-07T06:48:11",
      "timezone": "UTC",
    },
    "id": "76f18976-ed76-481e-a4c5-dc868bf8a5bc",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-10-11T23:22:25",
      "timezone": "UTC",
    },
    "id": "0723a198-1dd6-4292-acf8-47be234eb3ae",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-09-20T15:18:31",
      "timezone": "Asia/Singapore",
    },
    "id": "deaee628-5fa4-48e7-bd46-c3bc66ce9c4b",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-09-18T15:19:49",
      "timezone": "America/New_York",
    },
    "id": "adcd9af8-b1a1-4f04-882c-0702eb4e5ff2",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-09-12T18:16:39",
      "timezone": "America/New_York",
    },
    "id": "eca8865b-f1fa-438b-a356-4f403c86887f",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-09-02T10:33:10",
      "timezone": "Europe/Amsterdam",
    },
    "id": "270f696e-328f-4a6c-be37-06ce38cf738a",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-08-25T23:39:04",
      "timezone": "Asia/Singapore",
    },
    "id": "d786f6fe-b3a3-43d5-869f-f3837c5ed08e",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-08-04T20:21:39",
      "timezone": "Europe/Amsterdam",
    },
    "id": "9eddcb94-39d8-40dd-80ae-32ef7c9d2e88",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-08-02T11:43:48",
      "timezone": "America/Los_Angeles",
    },
    "id": "07607a66-5e82-403b-a02f-802b8e814b90",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-07-09T17:54:10",
      "timezone": "Asia/Singapore",
    },
    "id": "7ca9609b-a872-4f5b-a4dc-ad690fe0962b",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-06-14T12:42:27",
      "timezone": "America/New_York",
    },
    "id": "f3db1b15-8f8b-4ec6-982c-0564337ea720",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-06-03T23:19:12",
      "timezone": "Asia/Singapore",
    },
    "id": "a897c4e1-4323-4aab-a0e5-e18fa3c393fd",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-05-10T10:32:54",
      "timezone": "Asia/Singapore",
    },
    "id": "01e544ff-3cee-46fd-a912-f7bcdaeae17c",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-04-05T18:40:53",
      "timezone": "America/New_York",
    },
    "id": "cc8f47cc-3a72-441e-bd42-ef2a6b292207",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-03-14T12:14:49",
      "timezone": "America/Los_Angeles",
    },
    "id": "10061137-d0ea-45bb-b139-273eb8bf5d4a",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-02-15T06:57:18",
      "timezone": "America/Los_Angeles",
    },
    "id": "0175a329-074a-4e11-9e7a-59c333421cb6",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-01-25T05:34:26",
      "timezone": "America/New_York",
    },
    "id": "24d63888-b693-4a4d-b428-3207af4f61bc",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-01-12T05:28:53",
      "timezone": "Europe/Amsterdam",
    },
    "id": "7faeebd9-e27f-42b5-ae47-f4de3d1f23b6",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-01-10T21:24:08",
      "timezone": "Europe/Amsterdam",
    },
    "id": "d078f9f1-e82f-4719-a264-5f8dc539cf53",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-12-31T08:50:05",
      "timezone": "UTC",
    },
    "id": "a8052274-d790-4fb2-9d94-b24f6adb56ba",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-12-23T11:16:39",
      "timezone": "Asia/Singapore",
    },
    "id": "c8ba68a0-a5b3-4dea-846c-3620aaa8a619",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-12-21T11:40:04",
      "timezone": "UTC",
    },
    "id": "e0f0bb8d-2f7d-4f2e-9582-6711d83d24b3",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-12-12T00:30:01",
      "timezone": "Europe/Amsterdam",
    },
    "id": "a2ae20c3-e572-499f-aec6-4e82487f35ad",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-10-26T22:35:45",
      "timezone": "UTC",
    },
    "id": "d8783b60-6d52-4137-bd5b-94c7bae5b3cc",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-10-17T23:16:52",
      "timezone": "UTC",
    },
    "id": "2c5a8136-6143-482d-b5fe-1db88365137a",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-09-30T17:52:21",
      "timezone": "America/New_York",
    },
    "id": "8618d297-4613-4e83-8307-0973cab126c5",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-09-11T23:38:39",
      "timezone": "America/Los_Angeles",
    },
    "id": "7925c289-61bd-49fb-835e-7a7bdc743a56",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-09-04T03:02:17",
      "timezone": "Europe/Amsterdam",
    },
    "id": "254e9df0-7087-4566-b9ab-ad4703af0d6f",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-08-30T14:50:53",
      "timezone": "America/New_York",
    },
    "id": "c8c96bf3-b90a-4fc5-9d96-0702f551090e",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-08-10T03:49:47",
      "timezone": "America/New_York",
    },
    "id": "3f0d881d-3f4f-4898-ad26-41c793478f17",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-08-03T04:55:52",
      "timezone": "UTC",
    },
    "id": "6b38ac71-c28a-418d-80c3-6a6e2e25a57c",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-07-23T09:18:49",
      "timezone": "America/Los_Angeles",
    },
    "id": "7079448d-d586-4ad4-bcfd-b7d693578765",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-07-07T13:09:54",
      "timezone": "Europe/Amsterdam",
    },
    "id": "f20da6be-8097-41b3-9edc-5cec41829b02",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-07-04T21:26:39",
      "timezone": "UTC",
    },
    "id": "363510b9-0daf-40ca-a55b-a834f4b646a3",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-05-12T01:56:50",
      "timezone": "Asia/Singapore",
    },
    "id": "dc5cc3f4-455d-450d-9c6d-18fcd94e809b",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-05-03T03:48:47",
      "timezone": "America/Los_Angeles",
    },
    "id": "c6fb7cf0-237b-4c52-b974-9a0133fd2b40",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-04-29T21:46:59",
      "timezone": "Europe/Amsterdam",
    },
    "id": "083077bd-75ca-4530-b0a5-b61cf2da548d",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-04-09T21:51:50",
      "timezone": "America/Los_Angeles",
    },
    "id": "a8e7741b-88d7-42ea-9b6b-56dd7beed9d3",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-01-27T00:06:25",
      "timezone": "America/New_York",
    },
    "id": "edfec324-a0c0-43a4-9110-88e9002407ce",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-01-13T01:29:05",
      "timezone": "Europe/Amsterdam",
    },
    "id": "e92cbd23-b0e1-4960-927e-7f5927c2def8",
    "owner": "Ayla.Rippin",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will perform a basic search for log entries 1`] = `
[
  {
    "entryTime": {
      "date": "2024-03-31T05:14:52",
      "timezone": "Asia/Singapore",
    },
    "id": "9f907460-96d3-4c9b-828e-ac4d057d9bfe",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2024-03-23T14:26:14",
      "timezone": "UTC",
    },
    "id": "c75c55fe-436c-4167-a870-b3447f856ea4",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2024-03-22T20:41:55",
      "timezone": "UTC",
    },
    "id": "d1af5f9e-dda0-4de2-86fd-338d65b40518",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2024-03-01T03:05:37",
      "timezone": "America/Los_Angeles",
    },
    "id": "bbe40137-0a3e-4346-8118-9707ff0a2b6d",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2024-01-26T22:32:34",
      "timezone": "Asia/Singapore",
    },
    "id": "b07e5f28-c783-43f1-86e1-5fa8c69e1acc",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2024-01-04T23:23:44",
      "timezone": "America/Los_Angeles",
    },
    "id": "e5d2f80c-822e-42b9-931d-9785e30fb875",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-12-29T11:39:24",
      "timezone": "Europe/Amsterdam",
    },
    "id": "52e6c975-ee97-4bee-955a-6eb06d4fcc1b",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-12-14T05:01:27",
      "timezone": "UTC",
    },
    "id": "22e6c87f-73f7-4091-8e31-2253be9acb28",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-12-10T00:43:36",
      "timezone": "America/Los_Angeles",
    },
    "id": "ac536d66-7901-4596-8f38-06693dd1fa37",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-11-23T20:20:08",
      "timezone": "Asia/Singapore",
    },
    "id": "d0f4ce77-90d8-46e7-a227-18a89e6f48d2",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-11-07T06:48:11",
      "timezone": "UTC",
    },
    "id": "76f18976-ed76-481e-a4c5-dc868bf8a5bc",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-10-11T23:22:25",
      "timezone": "UTC",
    },
    "id": "0723a198-1dd6-4292-acf8-47be234eb3ae",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-09-20T15:18:31",
      "timezone": "Asia/Singapore",
    },
    "id": "deaee628-5fa4-48e7-bd46-c3bc66ce9c4b",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-09-18T15:19:49",
      "timezone": "America/New_York",
    },
    "id": "adcd9af8-b1a1-4f04-882c-0702eb4e5ff2",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-09-12T18:16:39",
      "timezone": "America/New_York",
    },
    "id": "eca8865b-f1fa-438b-a356-4f403c86887f",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-09-02T10:33:10",
      "timezone": "Europe/Amsterdam",
    },
    "id": "270f696e-328f-4a6c-be37-06ce38cf738a",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-08-25T23:39:04",
      "timezone": "Asia/Singapore",
    },
    "id": "d786f6fe-b3a3-43d5-869f-f3837c5ed08e",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-08-04T20:21:39",
      "timezone": "Europe/Amsterdam",
    },
    "id": "9eddcb94-39d8-40dd-80ae-32ef7c9d2e88",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-08-02T11:43:48",
      "timezone": "America/Los_Angeles",
    },
    "id": "07607a66-5e82-403b-a02f-802b8e814b90",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-07-09T17:54:10",
      "timezone": "Asia/Singapore",
    },
    "id": "7ca9609b-a872-4f5b-a4dc-ad690fe0962b",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-06-14T12:42:27",
      "timezone": "America/New_York",
    },
    "id": "f3db1b15-8f8b-4ec6-982c-0564337ea720",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-06-03T23:19:12",
      "timezone": "Asia/Singapore",
    },
    "id": "a897c4e1-4323-4aab-a0e5-e18fa3c393fd",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-05-10T10:32:54",
      "timezone": "Asia/Singapore",
    },
    "id": "01e544ff-3cee-46fd-a912-f7bcdaeae17c",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-04-05T18:40:53",
      "timezone": "America/New_York",
    },
    "id": "cc8f47cc-3a72-441e-bd42-ef2a6b292207",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-03-14T12:14:49",
      "timezone": "America/Los_Angeles",
    },
    "id": "10061137-d0ea-45bb-b139-273eb8bf5d4a",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-02-15T06:57:18",
      "timezone": "America/Los_Angeles",
    },
    "id": "0175a329-074a-4e11-9e7a-59c333421cb6",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-01-25T05:34:26",
      "timezone": "America/New_York",
    },
    "id": "24d63888-b693-4a4d-b428-3207af4f61bc",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-01-12T05:28:53",
      "timezone": "Europe/Amsterdam",
    },
    "id": "7faeebd9-e27f-42b5-ae47-f4de3d1f23b6",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2023-01-10T21:24:08",
      "timezone": "Europe/Amsterdam",
    },
    "id": "d078f9f1-e82f-4719-a264-5f8dc539cf53",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-12-31T08:50:05",
      "timezone": "UTC",
    },
    "id": "a8052274-d790-4fb2-9d94-b24f6adb56ba",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-12-23T11:16:39",
      "timezone": "Asia/Singapore",
    },
    "id": "c8ba68a0-a5b3-4dea-846c-3620aaa8a619",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-12-21T11:40:04",
      "timezone": "UTC",
    },
    "id": "e0f0bb8d-2f7d-4f2e-9582-6711d83d24b3",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-12-12T00:30:01",
      "timezone": "Europe/Amsterdam",
    },
    "id": "a2ae20c3-e572-499f-aec6-4e82487f35ad",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-10-26T22:35:45",
      "timezone": "UTC",
    },
    "id": "d8783b60-6d52-4137-bd5b-94c7bae5b3cc",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-10-17T23:16:52",
      "timezone": "UTC",
    },
    "id": "2c5a8136-6143-482d-b5fe-1db88365137a",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-09-30T17:52:21",
      "timezone": "America/New_York",
    },
    "id": "8618d297-4613-4e83-8307-0973cab126c5",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-09-11T23:38:39",
      "timezone": "America/Los_Angeles",
    },
    "id": "7925c289-61bd-49fb-835e-7a7bdc743a56",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-09-04T03:02:17",
      "timezone": "Europe/Amsterdam",
    },
    "id": "254e9df0-7087-4566-b9ab-ad4703af0d6f",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-08-30T14:50:53",
      "timezone": "America/New_York",
    },
    "id": "c8c96bf3-b90a-4fc5-9d96-0702f551090e",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-08-10T03:49:47",
      "timezone": "America/New_York",
    },
    "id": "3f0d881d-3f4f-4898-ad26-41c793478f17",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-08-03T04:55:52",
      "timezone": "UTC",
    },
    "id": "6b38ac71-c28a-418d-80c3-6a6e2e25a57c",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-07-23T09:18:49",
      "timezone": "America/Los_Angeles",
    },
    "id": "7079448d-d586-4ad4-bcfd-b7d693578765",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-07-07T13:09:54",
      "timezone": "Europe/Amsterdam",
    },
    "id": "f20da6be-8097-41b3-9edc-5cec41829b02",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-07-04T21:26:39",
      "timezone": "UTC",
    },
    "id": "363510b9-0daf-40ca-a55b-a834f4b646a3",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-05-12T01:56:50",
      "timezone": "Asia/Singapore",
    },
    "id": "dc5cc3f4-455d-450d-9c6d-18fcd94e809b",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-05-03T03:48:47",
      "timezone": "America/Los_Angeles",
    },
    "id": "c6fb7cf0-237b-4c52-b974-9a0133fd2b40",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-04-29T21:46:59",
      "timezone": "Europe/Amsterdam",
    },
    "id": "083077bd-75ca-4530-b0a5-b61cf2da548d",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-04-09T21:51:50",
      "timezone": "America/Los_Angeles",
    },
    "id": "a8e7741b-88d7-42ea-9b6b-56dd7beed9d3",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-01-27T00:06:25",
      "timezone": "America/New_York",
    },
    "id": "edfec324-a0c0-43a4-9110-88e9002407ce",
    "owner": "Ayla.Rippin",
  },
  {
    "entryTime": {
      "date": "2022-01-13T01:29:05",
      "timezone": "Europe/Amsterdam",
    },
    "id": "e92cbd23-b0e1-4960-927e-7f5927c2def8",
    "owner": "Ayla.Rippin",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will return a 400 response if the query parameters are invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_date",
      "message": "Invalid date",
      "path": [
        "startDate",
      ],
    },
    {
      "code": "invalid_date",
      "message": "Invalid date",
      "path": [
        "endDate",
      ],
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "skip",
      ],
      "type": "number",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 500,
      "message": "Number must be less than or equal to 500",
      "path": [
        "limit",
      ],
      "type": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'entryTime', received 'wetness'",
      "options": [
        "entryTime",
      ],
      "path": [
        "sortBy",
      ],
      "received": "wetness",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'asc' | 'desc', received 'backwards'",
      "options": [
        "asc",
        "desc",
      ],
      "path": [
        "sortOrder",
      ],
      "received": "backwards",
    },
  ],
}
`;

exports[`Log entries E2E tests when searching log entries will return a 400 response if the start date comes after the end date in the query string 1`] = `
{
  "issues": [
    {
      "code": "custom",
      "message": "Start date must be before end date.",
      "path": [],
    },
  ],
}
`;
